--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -24,7 +24,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="Barcode Value: "
-        tools:text="Barcode Value: "/>
+        android:text="Codigo: "
+        tools:text="Codigo: "/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
